Update and rename index.md to index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-## Welcome to GitHub Pages
-<a type="application/rss+xml" href="Gamers.xml">
-<img src="https://media.tenor.com/images/7bf5ec88f8a1c278bd8eaeb341602787/tenor.gif">
-</a>
+## Noticias tecnologicas
 
 You can use the [editor on GitHub](https://github.com/ccm91/News-EuroGamer.github.io/edit/master/index.md) to maintain and preview the content for your website in Markdown files.
 
 Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://jekyllrb.com/) to rebuild the pages in your site, from the content in your Markdown files.
 
+<a type="application/rss+xml" href="Gamers.xml">
+<img src="https://media.tenor.com/images/7bf5ec88f8a1c278bd8eaeb341602787/tenor.gif">
+</a>
 ### Markdown
 
 Markdown is a lightweight and easy-to-use syntax for styling your writing. It includes conventions for
